# oop-2026

./: .gitignore  README.md  pyproject.toml
oop_2026/bible/basic/: a.py  b.py  c.py  composition_mouse.py  dict_basics.py  dict_game.py  enumz.py  gg.py  poly.py  poly_container_runner.py  poly_interface.py  poly_zero.py  private_methods.py  sortable.py  x.py
oop_2026/bible/basic/generics/: a.py  g1.py  g2.py  g3.py  g3_.py  g4.py  g5.py
oop_2026/bible/generators/: simple_generator.py  simple_iterable.py
oop_2026/systems/cctv/: g1.py  gg.py  interfaces.py  model.py  tt.py  zipping.py
oop_2026/systems/cctv/heat/: image_tools.py
oop_2026/systems/file_analysis/: .env.example  a.py  engine.py  engine_gemini.py  engine_gpt.py  engine_grok.py  file_analysis_gemini.py  file_analysis_gpt.py  file_analysis_grok.py  q_generation.py  usage.py
oop_2026/systems/map_storage/: a.py  base.py  gg.py  perf.py  storage_client.py  storage_dict_and_list.py  storage_files.py  storage_mmap.py  storage_server.py  storage_tests.py
oop_2026/systems/timez/: basics.py  bool_override.py  serialization.py
tests/: test_cars.py  test_password_locker.py  test_poly.py
tests/systems/cctv/: test_evaluators.py
