[tool.poetry]
name = "oop-2026"
version = "0.1.0"
description = ""
authors = ["Piotr Marecki <pmarecki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.0"
pillow = "^12.0.0"
python-dotenv = "^1.2.1"
openai = "^2.14.0"
xai-sdk = "^1.5.0"
google-genai = "^1.56.0"
loguru = "^0.7.3"
faker = "^40.1.0"
uroman = "^1.3.1.1"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ty = "^0.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
